[gd_scene load_steps=11 format=3 uid="uid://dou75wqtdllm6"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_p0teb"]
[ext_resource type="Script" uid="uid://rc17wcva7g8o" path="res://addons/CustomControls/Dialogs/select_sound_dialog.gd" id="2_uk3cw"]
[ext_resource type="PackedScene" uid="uid://bj48rsidmna6s" path="res://addons/CustomControls/custom_spin_box.tscn" id="3_ang6w"]
[ext_resource type="PackedScene" uid="uid://c6vqhgg1w1sxj" path="res://addons/CustomControls/custom_button_2.tscn" id="4_toxv2"]
[ext_resource type="Texture2D" uid="uid://btjtps7r83y2t" path="res://addons/CustomControls/Images/buttons.png" id="5_wlfb0"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="6_lvsdd"]

[sub_resource type="Gradient" id="Gradient_vvvrv"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jhfde"]
gradient = SubResource("Gradient_vvvrv")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr6oq"]
atlas = ExtResource("5_wlfb0")
region = Rect2(48, 72, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_etj80"]
atlas = ExtResource("5_wlfb0")
region = Rect2(48, 96, 24, 24)

[node name="SelectSoundDialog" type="Window"]
title = "Select Sound"
position = Vector2i(0, 36)
size = Vector2i(500, 171)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_p0teb")
script = ExtResource("2_uk3cw")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_jhfde")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Filename:"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Filename" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer" instance=ExtResource("4_toxv2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "Click to select a sound

[Note]: Middle Click to erase.
"
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)
text = "Select Sound File"

[node name="PlayButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "[title]Play Audio[/title]
Plays the audio specified in filename."
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_vr6oq")
texture_hover = SubResource("AtlasTexture_etj80")

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Pitch:"

[node name="Pitch" parent="MarginContainer/VBoxContainer/HBoxContainer4" instance=ExtResource("3_ang6w")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Selects the pitch for the sound. (Default: 1.0)"
min_value = 0.01
max_value = 4.0
step = 0.01
value = 1.0

[node name="RandomPitch" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/RandomPitch"]
layout_mode = 2
text = " ~ "

[node name="Pitch2" parent="MarginContainer/VBoxContainer/HBoxContainer4/RandomPitch" instance=ExtResource("3_ang6w")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Selects the pitch for the sound. (Default: 1.0)

When playing a sound it will be played with a random pitch between “Pitch 1” and “Pitch 2”."
min_value = 0.01
max_value = 4.0
step = 0.01
value = 1.0

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Volume:"

[node name="Volume" parent="MarginContainer/VBoxContainer/HBoxContainer5" instance=ExtResource("3_ang6w")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Select the volume_db for this audio (Default: 0.0)"
min_value = -80.0
max_value = 24.0
step = 0.01

[node name="FadeInContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/FadeInContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Fade-in:"

[node name="FadeIn" parent="MarginContainer/VBoxContainer/FadeInContainer" instance=ExtResource("3_ang6w")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Select the volume_db for this audio (Default: 0.0)"
step = 0.01
allow_greater = true
suffix = " seconds"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("6_lvsdd")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("6_lvsdd")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
text = "Cancel"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="gui_input" from="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/Filename" to="." method="_on_filename_gui_input"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/Filename" to="." method="_on_filename_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer4/Pitch" to="." method="_on_pitch_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer4/RandomPitch/Pitch2" to="." method="_on_pitch_2_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/CancelButton" to="." method="_on_cancel_button_pressed"]
